improved auto completion